Complete Security Implementation
Complete security implementation from gateway, order-service, product-service, payment-service.
We are checking scope in payment-service and authority-role in product-service.